--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "frontend-paric",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "index.js",
   "type": "module",
+  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "nodemon": "^3.1.0",
     "playwright": "^1.43.1"
   }
 }
