--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "frontend-paric",
+  "name": "pricehive",
   "version": "1.0.0",
+  "description": "Welcome to our online price comparator, where you can find the best prices for your  you can find the best prices for your favorite technology products in the main e-commerce stores in Colombia.",
   "main": "index.js",
-  "type": "module",
+  "dependencies": {
+    "express": "^4.19.2",
+    "nodemon": "^3.1.0",
+    "playwright": "^1.44.0"
+  },
   "scripts": {
     "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "description": "Welcome to our online price comparator, where you can find the best prices for your  you can find the best prices for your favorite technology products in the main e-commerce stores in Colombia.",
-  "dependencies": {
-    "nodemon": "^3.1.0",
-    "playwright": "^1.44.0"
-  },
-  "devDependencies": {}
+  "license": "ISC"
 }
